# cuda_hip_comparison

./: CMakeLists.txt  main.cu  main.hip  main.hip.cpp
